[package]
authors = ["The Rust Project Developers"]
name = "rustc_llvm"
version = "0.0.0"
edition = "2018"

[features]
static-libstdcpp = []
emscripten = []

[dependencies]
libc = { git = "https://github.com/Steav005/libc" }

[build-dependencies]
build_helper = { path = "../../src/build_helper" }
cc = { git = "https://github.com/Steav005/cc-rs" }
